test/sema/typeck/pattern/class-private-ctor.dora
mod n {
    pub class Foo(pub Int64, String)
}
fn f(x: n::Foo): Int64 {
    let n::Foo(a, b) = x;
    a
}
